# server-anytls-rs

./: .gitignore  Cargo.toml  Makefile  README.md  acl.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: auth_padding_bench.rs  channel_pressure_bench.rs  control_frame_bench.rs  dns_bench.rs  download_throughput_bench.rs  frame_bench.rs  host_string_bench.rs  lock_contention_bench.rs  padding_bench.rs  padding_clone_bench.rs  relay_bench.rs  session_bench.rs  settings_response_bench.rs  stream_write_bench.rs  tls_resumption_bench.rs  write_batch_bench.rs  write_cmd_capacity_bench.rs  write_frame_alloc_bench.rs
docs/specs/: 2026-04-16-anytls-core-design.md
src/: acl.rs  config.rs  config_auto.rs  error.rs  handler.rs  lib.rs  logger.rs  main.rs  net.rs  outbound.rs  udp_relay.rs
src/business/: mod.rs
src/core/: connection.rs  frame.rs  hooks.rs  mod.rs  padding.rs  server.rs  session.rs  stream.rs
tests/: e2e.rs
