[package]
name = "server-anytls-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "2"
bytes = "1"
sha2 = "0.10"
md-5 = "0.10"
rand = "0.9"
tracing = "0.1"
thiserror = "2"
tokio-util = "0.7"
async-trait = "0.1"
subtle = "2"
tikv-jemallocator = "0.6"
rustc-hash = "2.1.2"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
rcgen = "0.14.7"

[[bench]]
name = "frame_bench"
harness = false

[[bench]]
name = "padding_bench"
harness = false

[[bench]]
name = "session_bench"
harness = false

[[bench]]
name = "write_batch_bench"
harness = false

[[bench]]
name = "relay_bench"
harness = false

[[bench]]
name = "control_frame_bench"
harness = false

[[bench]]
name = "stream_write_bench"
harness = false

[[bench]]
name = "tls_resumption_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
