[package]
name = "server-anytls-rs"
version = "0.1.14"
edition = "2024"

[[bin]]
name = "server-anytls-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "2"
bytes = "1"
sha2 = "0.10"
md-5 = "0.10"
rand = "0.9"
tracing = "0.1"
thiserror = "2"
tokio-util = "0.7"
async-trait = "0.1"
subtle = "2"
tikv-jemallocator = "0.6"
rustc-hash = "2.1.2"
dashmap = "6.1"
moka = { version = "0.12", features = ["future"] }
scopeguard = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
humantime = "2"
tracing-subscriber = { version = "0.3", features = ["time", "local-time"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
acl-engine-rs = { git = "https://github.com/xflash-panda/acl-engine-rs.git", tag = "v0.4.4", features = ["async"] }

# Panel Integration (connect-rpc via QUIC/H3)
panel-core = { git = "https://github.com/xflash-panda/server-panel-rs", tag = "v0.1.7" }
panel-connect-rpc = { git = "https://github.com/xflash-panda/server-panel-rs", tag = "v0.1.7" }
socket2 = "0.6"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
rcgen = "0.14.7"
tempfile = "3"

[[bench]]
name = "frame_bench"
harness = false

[[bench]]
name = "padding_bench"
harness = false

[[bench]]
name = "session_bench"
harness = false

[[bench]]
name = "write_batch_bench"
harness = false

[[bench]]
name = "relay_bench"
harness = false

[[bench]]
name = "control_frame_bench"
harness = false

[[bench]]
name = "stream_write_bench"
harness = false

[[bench]]
name = "tls_resumption_bench"
harness = false

[[bench]]
name = "dns_bench"
harness = false

[[bench]]
name = "write_frame_alloc_bench"
harness = false

[[bench]]
name = "host_string_bench"
harness = false

[[bench]]
name = "lock_contention_bench"
harness = false

[[bench]]
name = "settings_response_bench"
harness = false

[[bench]]
name = "auth_padding_bench"
harness = false

[[bench]]
name = "padding_clone_bench"
harness = false

[[bench]]
name = "channel_pressure_bench"
harness = false

[[bench]]
name = "write_cmd_capacity_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
